<resources>
    <string name="app_name">WalletTracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="income">Income</string>
    <string name="expanse">Expanse</string>
    <string name="title">title</string>
    <string name="note">note</string>
    <string name="sum">sum</string>
    <string name="date">Date</string>
    <string name="time">time</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="categories">Categories</string>
    <string name="please_select_a_category">Please select a category</string>
    <string name="please_select_a_currency">Please select a currency</string>
    <string name="plus_number">+25624.98$</string>
    <string name="today">Today</string>
    <string name="last_week">Last week</string>
    <string name="this_week">This week</string>
    <string name="no_completed_transactions_for_today">No completed transactions for today</string>
    <string name="please_enter_title">Please enter a title</string>
    <string name="please_enter_first_name">Please enter your name</string>
    <string name="please_enter_sum">Please enter a sum</string>
    <string name="wrong_format">Wrong format</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="done">Done</string>
    <string name="clear">Clear</string>
    <string name="chyzhevskyi_tymofii">Chyzhevskyi Tymofii</string>
    <string name="ch_tima_example_com">ch-tima@example.com</string>
    <string name="balance">Balance:</string>
    <string name="number">19,867.91$</string>
    <string name="top_up">Top-Up</string>
    <string name="theme">Theme</string>
    <string name="create_backup">Create Backup</string>
    <string name="import_backup">Import Backup</string>
    <string name="generate_report">Generate Report</string>
    <string name="help">Help</string>
    <string name="logout">logOut</string>
    <string name="number_btn">number_btn</string>
    <string name="replenishment_message">Replenishment</string>
    <string name="help_about">Help/About</string>
    <string name="support">Support</string>
    <string name="help_developer_forge_gmail_com">help.developer.forge@gmail.com</string>
    <string name="more_about_us">More about us</string>
    <string name="github">GitHub</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="help_us">Help us</string>
    <string name="buy_me_coffee">Buy me coffee</string>
    <string name="rate_us">Rate us</string>
    <string name="buy_coffee">Buy Coffee</string>
    <string name="version">Version:1.0</string>
    <string name="support_email_copy">Support email copied!</string>
    <string name="welcome_to_wallettracker">Welcome to WalletTracker!</string>
    <string name="great_you_ve_taken_the_first_step_towards_organizing_your_finances_let_s_keep_going">Great, you\'ve taken the first step towards organizing your finances! Let\'s keep going!</string>
    <string name="get_started">Get Started</string>
    <string name="by_using_wallettracker_you_agree_to_the_font_color_ff0000_privacy_policy_font"><![CDATA[By using WalletTracker, you agree to the <font color=\'#787DEB\'>privacy policy</font>]]></string>
    <string name="create_your_local_profile">Create Your Local Profile!</string>
    <string name="great_let_s_continue_and_create_your_profile_note_this_will_be_a_local_profile">Great! Let\'s continue and create your profile. \nNote, this will be a local profile.</string>
    <string name="first_name_request">First name*</string>
    <string name="last_name_request">Last name</string>
    <string name="next">Next</string>
    <string name="currency_request">Currency*</string>
    <string name="unexpected_error">Unexpected error</string>
    <string-array name="arr_currencies">
        <item>AED</item>
        <item>AFN</item>
        <item>ALL</item>
        <item>AMD</item>
        <item>ANG</item>
        <item>AOA</item>
        <item>ARS</item>
        <item>AUD</item>
        <item>AWG</item>
        <item>AZN</item>
        <item>BAM</item>
        <item>BBD</item>
        <item>BDT</item>
        <item>BGN</item>
        <item>BHD</item>
        <item>BIF</item>
        <item>BMD</item>
        <item>BND</item>
        <item>BOB</item>
        <item>BRL</item>
        <item>BSD</item>
        <item>BTN</item>
        <item>BWP</item>
        <item>BYN</item>
        <item>BZD</item>
        <item>CAD</item>
        <item>CDF</item>
        <item>CHF</item>
        <item>CLP</item>
        <item>CNY</item>
        <item>COP</item>
        <item>CRC</item>
        <item>CUP</item>
        <item>CVE</item>
        <item>CZK</item>
        <item>DJF</item>
        <item>DKK</item>
        <item>DOP</item>
        <item>DZD</item>
        <item>EGP</item>
        <item>ERN</item>
        <item>ETB</item>
        <item>EUR</item>
        <item>FJD</item>
        <item>FKP</item>
        <item>FOK</item>
        <item>GBP</item>
        <item>GEL</item>
        <item>GGP</item>
        <item>GHS</item>
        <item>GIP</item>
        <item>GMD</item>
        <item>GNF</item>
        <item>GTQ</item>
        <item>GYD</item>
        <item>HKD</item>
        <item>HNL</item>
        <item>HRK</item>
        <item>HTG</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>IMP</item>
        <item>INR</item>
        <item>IQD</item>
        <item>IRR</item>
        <item>ISK</item>
        <item>JEP</item>
        <item>JMD</item>
        <item>JOD</item>
        <item>JPY</item>
        <item>KES</item>
        <item>KGS</item>
        <item>KHR</item>
        <item>KID</item>
        <item>KMF</item>
        <item>KRW</item>
        <item>KWD</item>
        <item>KYD</item>
        <item>KZT</item>
        <item>LAK</item>
        <item>LBP</item>
        <item>LKR</item>
        <item>LRD</item>
        <item>LSL</item>
        <item>LYD</item>
        <item>MAD</item>
        <item>MDL</item>
        <item>MGA</item>
        <item>MKD</item>
        <item>MMK</item>
        <item>MNT</item>
        <item>MOP</item>
        <item>MRU</item>
        <item>MUR</item>
        <item>MVR</item>
        <item>MWK</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>MZN</item>
        <item>NAD</item>
        <item>NGN</item>
        <item>NIO</item>
        <item>NOK</item>
        <item>NPR</item>
        <item>NZD</item>
        <item>OMR</item>
        <item>PAB</item>
        <item>PEN</item>
        <item>PGK</item>
        <item>PHP</item>
        <item>PKR</item>
        <item>PLN</item>
        <item>PYG</item>
        <item>QAR</item>
        <item>RON</item>
        <item>RSD</item>
        <item>RUB</item>
        <item>RWF</item>
        <item>SAR</item>
        <item>SBD</item>
        <item>SCR</item>
        <item>SDG</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>SHP</item>
        <item>SLE</item>
        <item>SLL</item>
        <item>SOS</item>
        <item>SRD</item>
        <item>SSP</item>
        <item>STN</item>
        <item>SYP</item>
        <item>SZL</item>
        <item>THB</item>
        <item>TJS</item>
        <item>TMT</item>
        <item>TND</item>
        <item>TOP</item>
        <item>TRY</item>
        <item>TTD</item>
        <item>TVD</item>
        <item>TWD</item>
        <item>TZS</item>
        <item>UAH</item>
        <item>UGX</item>
        <item>USD</item>
        <item>UYU</item>
        <item>UZS</item>
        <item>VES</item>
        <item>VND</item>
        <item>VUV</item>
        <item>WST</item>
        <item>XAF</item>
        <item>XCD</item>
        <item>XDR</item>
        <item>XOF</item>
        <item>XPF</item>
        <item>YER</item>
        <item>ZAR</item>
        <item>ZMW</item>
        <item>ZWL</item>
    </string-array>
    <string name="currency_aed">د.إ</string>
    <string name="currency_afn">؋</string>
    <string name="currency_all">L</string>
    <string name="currency_amd">֏</string>
    <string name="currency_ang">ƒ</string>
    <string name="currency_aoa">Kz</string>
    <string name="currency_ars">$</string>
    <string name="currency_aud">$</string>
    <string name="currency_awg">ƒ</string>
    <string name="currency_azn">₼</string>
    <string name="currency_bam">KM</string>
    <string name="currency_bbd">$</string>
    <string name="currency_bdt">৳</string>
    <string name="currency_bgn">лв</string>
    <string name="currency_bhd">.د.ب</string>
    <string name="currency_bif">FBu</string>
    <string name="currency_bmd">$</string>
    <string name="currency_bnd">$</string>
    <string name="currency_bob">Bs.</string>
    <string name="currency_brl">R$</string>
    <string name="currency_bsd">$</string>
    <string name="currency_btn">Nu.</string>
    <string name="currency_bwp">P</string>
    <string name="currency_byn">Br</string>
    <string name="currency_bzd">$</string>
    <string name="currency_cad">$</string>
    <string name="currency_cdf">FC</string>
    <string name="currency_chf">CHF</string>
    <string name="currency_clp">$</string>
    <string name="currency_cny">¥</string>
    <string name="currency_cop">$</string>
    <string name="currency_crc">₡</string>
    <string name="currency_cup">$</string>
    <string name="currency_cve">Esc</string>
    <string name="currency_czk">Kč</string>
    <string name="currency_djf">Fdj</string>
    <string name="currency_dkk">kr</string>
    <string name="currency_dop">$</string>
    <string name="currency_dzd">دج</string>
    <string name="currency_egp">£</string>
    <string name="currency_ern">Nfk</string>
    <string name="currency_etb">Br</string>
    <string name="currency_eur">€</string>
    <string name="currency_fjd">$</string>
    <string name="currency_fkp">£</string>
    <string name="currency_fok">kr</string>
    <string name="currency_gbp">£</string>
    <string name="currency_gel">₾</string>
    <string name="currency_ggp">£</string>
    <string name="currency_ghs">₵</string>
    <string name="currency_gip">£</string>
    <string name="currency_gmd">D</string>
    <string name="currency_gnf">FG</string>
    <string name="currency_gtq">Q</string>
    <string name="currency_gyd">$</string>
    <string name="currency_hkd">$</string>
    <string name="currency_hnl">L</string>
    <string name="currency_hrk">kn</string>
    <string name="currency_htg">G</string>
    <string name="currency_huf">Ft</string>
    <string name="currency_idr">Rp</string>
    <string name="currency_ils">₪</string>
    <string name="currency_imp">£</string>
    <string name="currency_inr">₹</string>
    <string name="currency_iqd">ع.د</string>
    <string name="currency_irr">﷼</string>
    <string name="currency_isk">kr</string>
    <string name="currency_jep">£</string>
    <string name="currency_jmd">$</string>
    <string name="currency_jod">د.ا</string>
    <string name="currency_jpy">¥</string>
    <string name="currency_kes">Sh</string>
    <string name="currency_kgs">с</string>
    <string name="currency_khr">៛</string>
    <string name="currency_kid">$</string>
    <string name="currency_kmf">CF</string>
    <string name="currency_krw">₩</string>
    <string name="currency_kwd">د.ك</string>
    <string name="currency_kyd">$</string>
    <string name="currency_kzt">₸</string>
    <string name="currency_lak">₭</string>
    <string name="currency_lbp">ل.ل</string>
    <string name="currency_lkr">Rs</string>
    <string name="currency_lrd">$</string>
    <string name="currency_lsl">L</string>
    <string name="currency_lyd">ل.د</string>
    <string name="currency_mad">د.م.</string>
    <string name="currency_mdl">L</string>
    <string name="currency_mga">Ar</string>
    <string name="currency_mkd">ден</string>
    <string name="currency_mmk">Ks</string>
</resources>