<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:padding="8dp"
    tools:context=".fragments.AddTransactionDialogFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_transaction"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.02"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.02" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/panel_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/type_transaction_layout"
            app:layout_constraintTop_toBottomOf="@id/title">

            <EditText
                android:id="@+id/title_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                android:hint="@string/title"
                app:layout_constraintBottom_toTopOf="@id/note_transaction"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/note_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                android:hint="@string/note"
                app:layout_constraintBottom_toTopOf="@id/sum_transaction"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title_transaction" />

            <EditText
                android:id="@+id/sum_transaction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                android:text="0.0"
                android:hint="@string/sum"
                android:inputType="numberDecimal"
                app:layout_constraintBottom_toTopOf="@id/category_transaction"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/note_transaction"
                tools:ignore="HardcodedText" />

            <Spinner
                android:id="@+id/category_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="8dp"
                app:layout_constraintHorizontal_bias="0.025"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sum_transaction" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/type_transaction_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/datetime_picker"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/panel_inputs">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income" />

            <Switch
                android:id="@+id/type_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expanse" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/datetime_picker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="4dp"
            app:layout_constraintBottom_toTopOf="@id/panel_buttons"
            app:layout_constraintTop_toBottomOf="@id/type_transaction_layout"
            tools:layout_editor_absoluteX="0dp">

            <Button
                android:id="@+id/date_picker_transaction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/panel_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="13dp"
            app:layout_constraintBottom_toBottomOf="parent">

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintHorizontal_bias="0.925"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/add_button"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add"
                app:layout_constraintHorizontal_bias="0.95"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>