<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.welcome.CreateUserFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginVertical="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_your_local_profile"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/dark_midnight_blue"
                android:textSize="28sp"/>
            <TextView
                android:id="@+id/tv_greeting_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/great_let_s_continue_and_create_your_profile_note_this_will_be_a_local_profile"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/darkened_slate_blue"
                android:textSize="16sp"
                android:fontFamily="@font/outfit_regular"
                android:paddingHorizontal="16dp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/inputs_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_next"
            android:orientation="vertical"
            android:gravity="center">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_input_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="300dp"
                app:errorEnabled="true"
                android:layout_marginVertical="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:textSize="17sp"
                    android:hint="@string/first_name_request"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/lastname_input_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="300dp"
                app:errorEnabled="true"
                android:layout_marginVertical="4dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/lastname_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:imeOptions="actionDone"
                    android:textSize="17sp"
                    android:hint="@string/last_name_request"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/currency_input_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="300dp"
                app:errorEnabled="true"
                android:layout_marginVertical="4dp"
                style="@style/AppCompleteTextInputLayoutStyle">
                <AutoCompleteTextView
                    android:id="@+id/currency_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textSize="17sp"
                    android:inputType="none"
                    android:hint="@string/currency_request"
                    style="@style/AppCompleteTextStyle"/>
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="58dp"
            android:minWidth="200dp"
            android:text="@string/create"
            app:icon="@drawable/next24"
            app:iconGravity="end"
            android:textSize="21sp"
            app:iconSize="24dp"
            android:backgroundTint="@color/light_slate_blue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputs_layout"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>