<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.welcome.WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginVertical="16dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_wallettracker"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/dark_midnight_blue"
                android:textSize="28sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/great_you_ve_taken_the_first_step_towards_organizing_your_finances_let_s_keep_going"
                android:layout_gravity="center"
                android:gravity="center"
                android:textColor="@color/darkened_slate_blue"
                android:textSize="16sp"
                android:fontFamily="@font/outfit_regular"
                android:paddingHorizontal="16dp"/>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="58dp"
            android:text="@string/get_started"
            app:icon="@drawable/next24"
            app:iconGravity="end"
            android:textSize="21sp"
            app:iconSize="24dp"
            android:backgroundTint="@color/light_slate_blue"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_get_started_from_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/use_backup"
            android:textColor="@color/light_slate_blue"
            app:iconGravity="end"
            android:textSize="17.5sp"
            app:iconSize="24dp"
            android:backgroundTint="@color/transparent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_get_started"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.05"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>